syntax = "proto3";
package configpb;

message Config{
    DynastyConfig   dynastyConfig = 1;
    ConsensusConfig consensusConfig = 2;
    NodeConfig      nodeConfig = 3;
}

message DynastyConfig{
    repeated string producers =1;
}

message ConsensusConfig{
    string minerAddr = 1;
}

message NodeConfig{
    uint32 port = 1;
    string seed = 2;
    string dbPath = 3;
    uint32 rpcPort = 4;
}